--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Sorting Algorithm Visualizer</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="fontawesome-free-6.1.1-web/css/all.css">
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     </head>
 <body>
     <header>Sorting Visualizer</header>
@@ -21,7 +22,8 @@
             <option value="selection">Selection Sort</option>
             <option value="insertion">Insertion Sort</option>
             <option value="heap">Heap Sort</option>
-            <option value="quick" selected>Quick Sort</option>
+            <option value="quick">Quick Sort</option>
+            <option value="rQuick" selected>Randomized Quick Sort</option>
             <option value="bubble">Bubble Sort</option>
             <option value="merge">Merge Sort</option>
         </select>
