--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     </head>
 <body>
-    <header>Sorting Visualizer</header>
+    <a href="https://kritik09.github.io/GraphVisualizer/">
+        <header>Sorting Visualizer</header>
+    </a>
     <nav>
         <h1 class="start__button">
             <i class="fa-solid fa-circle-play " onclick="start()" font-size="20px"></i>
